findbug fixes